kube/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gossip-world-app
  namespace: gossip-world
  labels:
    app: gossip-world-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gossip-world-app
  template:
    metadata:
      labels:
        app: gossip-world-app
    spec:
      containers:
        - name: gossip-world-app
          image: mpots/gossip-world:v1.5.0
          ports:
            - containerPort: 10007
