kube/db.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gossip-world-db
  namespace: gossip-world
  labels:
    app: gossip-world-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gossip-world-db
  template:
    metadata:
      labels:
        app: gossip-world-db
    spec:
      volumes:
        - name: gossip-world-db-volume
          persistentVolumeClaim:
            claimName: pvc-gossip-world-db
      containers:
        - name: gossip-world-db
          image: mariadb:10.6.3
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: gossip-world-db-volume
