kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: internal-ca-issuer
  name: gossip-world-app-ingress
  namespace: gossip-world
spec:
  ingressClassName: nginx
  rules:
    - host: gossip-world.internal.local
      http:
        paths:
          - backend:
              service:
                name: gossip-world-app
                port:
                  number: 10007
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gossip-world.internal.local
      secretName: gossip-world-tls-secret
